(executable
 (name obf)
 (libraries ppx_deriving.std
            angstrom
            ctypes
            llvm
            llvm.analysis
            llvm.all_backends
            llvm.executionengine
            llvm.scalar_opts
            llvm.target)
 (preprocess (pps ppx_deriving.std
                  ppx_deriving_argparse)))

(install
 (section bin)
 (files (obf.exe as obf)))
